--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Lexend Deca", sans-serif;;
+    font-family: "Lexend Deca", sans-serif;
 
 }
 .con1{
@@ -51,6 +51,8 @@ header{
     
     padding: 15px;
     z-index: 2;
+    margin-left: 2em;
+    padding-top: 1em;
  
     display: flex;
     justify-content: space-between;
@@ -103,7 +105,7 @@ i:hover{
     padding-top: 2em;
 }
 #menu{
-    height: 700px;
+    height: 750px;
     width: 100%;
     position: relative;
     background-image: url(https://cdn.pixabay.com/photo/2023/09/22/07/23/ai-generated-8268310_1280.jpg);
