--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,7 @@ color: rgb(60, 202, 60);
     background-size: cover;
     object-fit: cover;
     align-items: center;
+    gap: 2em;
     
     display: flex;
     justify-content: center;
@@ -192,6 +193,7 @@ color: rgb(60, 202, 60);
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
+    gap: 1.5em;
     background-color: rgb(66, 66, 186);
 background-size: cover;}
 #lunch img{
@@ -213,10 +215,11 @@ background-size: cover;}
     background-size: cover;
 }
 .br3{ 
-    padding-top :0.5em;
+    padding-top :1em;
     color: white;
     background-color: black;
     background-position: top;
+    margin-top: 3.3em;
 
 }
 .br3 img{
@@ -224,19 +227,21 @@ background-size: cover;}
 }
 #Dinner{
     display: flex;
-    height: 700px;
+    height: 750px;
     justify-content: center;
+    align-items: center;
     background-color: rgb(34, 174, 67);
     background-size: cover;
     flex-wrap: wrap;
+    gap: 2em;
+    align-items: center;
     width: 100%;
 }
 .bs{
-    width: 240px;
+    width: 260px;
     height: 280px;
     border-radius: 10px;
-margin-top: 2em;
-margin-right: 4em;
+margin-top: 1em;
     background-color: white;
 }
 .bs:hover{
@@ -262,12 +267,14 @@ margin-right: 4em;
     padding-top: 0.5em; 
    background-color: rgb(66, 66, 186);
     background-size: cover;
+    margin-top: 1.5em;
 }
 .br2{
     color: white;
     padding-top :0.5em;
     background-size: cover;
    background-color: rgb(34, 174, 67);
+   margin-top:1em;
 
 }
 
